# spectral_unmixing

./: .gitignore  .gitmodules  README.md  dispersion_model.py  feely.ipynb  optimization_functions.py  optimization_problem.py  pyproject.toml  solver.py  synthetic.ipynb
latex/: jmlr2e.sty  main.tex  theory.bib  unmixing.bib
src/: objective.py  regularization.py  solver.py  utils.py
tests/: test_InfraRender.py  test_regularization.py
